--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,8 +85,8 @@ jobs:
 
   deploy-staging:
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      - uses: ./.github/workflows/deploy.yml
+      - uses: ./.github/workflows/deploy
         with:
-          username: ${{ inputs.username }}
-          token: ${{ secrets.token }}
+          environment: staging
