--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,6 +87,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: ./.github/workflows/deploy
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      - uses: ./.github/workflows/deploy.yml
         with:
           environment: staging
