--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,15 @@ on:
   workflow_call:
     inputs:
       environment:
+        description: 'Environment to deploy to'
         required: true
-        type: string
+        type: string 
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        required: true
+        type: string 
   
 jobs:
   deploy:
