--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ on:
           - whitelabel3
 
 jobs:
-  trigger-deploy:
+  trigger:
     uses: ./.github/workflows/deploy.yml
     with:
       environment: ${{ inputs.environment }}
