--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
         with:
-          depth: 2
+          fetch-depth: 2
       -
         name: Repo metadata
         id: repo
