--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
         id: prepare
         run: |
           DOCKER_IMAGE=ghcr.io/${{ fromJson(steps.repo.outputs.result).full_name }}
-          VERSION=$(TZ=UTC git show --quiet --date="format-local:%Y%m%dT%H%M%S" --format="%cd-%h" ${{ github.sha }})
-          PREVIOUS_VERSION=$(TZ=UTC git log -1 --date="format-local:%Y%m%dT%H%M%S" --format="%cd-%h" --first-parent ${{ github.sha }}^)
+          VERSION=$(TZ=UTC git show --quiet --date="format-local:%Y%m%d%H%M%S" --format="%cd-%h" ${{ github.sha }})
+          PREVIOUS_VERSION=$(TZ=UTC git log -1 --date="format-local:%Y%m%d%H%M%S" --format="%cd-%h" --first-parent ${{ github.sha }}^)
           echo ::set-output name=version::${VERSION}
           echo ::set-output name=previous_version::${PREVIOUS_VERSION}
           echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
