--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,10 @@ jobs:
         name: Prepare
         id: prepare
         run: |
-          DOCKER_IMAGE=ghcr.io/${{ fromJson(steps.repo.outputs.result).full_name }}
+          IMAGE_PATH=ghcr.io/${{ fromJson(steps.repo.outputs.result).full_name }}
           VERSION=$(TZ=UTC git show --quiet --date="format-local:%Y%m%d%H%M%S" --format="%cd-%h" ${{ github.sha }})
           PREVIOUS_VERSION=$(TZ=UTC git log -1 --date="format-local:%Y%m%d%H%M%S" --format="%cd-%h" --first-parent ${{ github.sha }}^)
+          echo ::set-output name=image::${IMAGE_PATH}
           echo ::set-output name=version::${VERSION}
           echo ::set-output name=previous_version::${PREVIOUS_VERSION}
           echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
@@ -53,7 +54,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.prepare.outputs.version }},edge
+          tags: ${{steps.prepate.outputs.image}}:${{ steps.prepare.outputs.version }}
           labels: |
             org.opencontainers.image.title=${{ fromJson(steps.repo.outputs.result).name }}
             org.opencontainers.image.description=${{ fromJson(steps.repo.outputs.result).description }}
@@ -65,7 +66,6 @@ jobs:
             org.opencontainers.image.licenses=${{ fromJson(steps.repo.outputs.result).license.spdx_id }}
           cache-from: |
             ghcr.io/${{ fromJson(steps.repo.outputs.result).full_name }}:${{ steps.prepare.outputs.previous_version }}
-            ghcr.io/${{ fromJson(steps.repo.outputs.result).full_name }}:edge
 
       - name: Create version tag
         uses: mathieudutour/github-tag-action@v6.0
