--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,3 +19,4 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     with:
       environment: ${{ inputs.environment }}
+      ref: ${{ github.ref }}
