--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,4 +80,4 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     with:
       environment: staging
-      tag: ${{ steps.prepare.outputs.version }}
+      tag: ${{ needs.build.steps.prepare.outputs.version }}
